# tmplgen

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  TODO.md  build.rs
benches/: benchmarks.rs
man/: tmplgen.1  tmplgen.1.scd
src/: built_in.in  cli.yml  crates.rs  dist_gems.in  gems.rs  helpers.rs  main.rs  perldist.rs  template.in  tests.rs  tmplwriter.rs  types.rs
src/lib/: built_in.in  corrected_values.in  crates.rs  data.toml  errors.rs  gems.rs  helpers.rs  lib.rs  native_deps.in  perldist.rs  template.in  tmplwriter.rs  types.rs
src/lib/tests/: mod.rs  template_test_crate.in  template_test_crate_noprefix.in  template_test_perl.in  template_test_ruby.in
src/tests/: mod.rs  template_test  template_test_crate.in  template_test_perl.in
