[package]
name = "tmplgen"
version = "0.98.0"
authors = ["Rasmus Thomsen <rasmus.thomsen@protonmail.com>"]
description = "Void Linux template generator for language-specific package managers"
homepage = "https://github.com/Cogitri/tmplgen"
repository = "https://github.com/Cogitri/tmplgen"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["binary", "cli", "linux", "void-linux"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
crates_io_api = { path="vendor/crates_io_api", version="0.3.0" }
clap = {version = "^2.32", features = ["yaml"]}
rubygems_api = "^0.2.0"
failure = "^0.1.3"
log = "^0.4.6"
env_logger = {version= "^0.6.0", features = ["termcolor"]}
metacpan_api = "^0.3.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
sha2 = "0.8.0"
reqwest = "0.9.5"

[dev-dependencies]
cargo-husky = {version = "^1.2.0", features = ["precommit-hook", "run-cargo-test"]}

[lib]
name = "libtmplgen"
path = "src/lib/lib.rs"

[[bin]]
name = "tmplgen"
path = "src/bin/bin.rs"
test = false # We test the lib

[profile.release]
lto = true
codegen-units = 1 # best optimization

[badges]
travis-ci = { repository = "Cogitri/tmplgen" }
codecov = { repository = "https://codecov.io/gh/Cogitri/tmplgen" }
