[package]
name = "tmplgen"
version = "1.0.0"
authors = ["Rasmus Thomsen <rasmus.thomsen@protonmail.com>"]
description = "Void Linux template generator for language-specific package managers"
homepage = "https://github.com/Cogitri/tmplgen"
repository = "https://github.com/Cogitri/tmplgen"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["binary", "cli", "linux", "void-linux"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
crates_io_api = { path="vendor/crates_io_api", version="0.3.0" }
clap = {version = "2.32", features = ["yaml"]}
rubygems_api = "0.3"
failure = "0.1"
log = "0.4"
env_logger = {version= "0.6", features = ["termcolor"]}
metacpan_api = "0.5"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
sha2 = "0.8"
reqwest = "0.9"
indicatif = "0.10"
retry = "0.4"
# rustc-demangle >=0.1.10 needs nightly cargo features for building, which causes the coverage build to fail
rustc-demangle = "=0.1.9"

[dev-dependencies]
cargo-husky = {version = "1.2", features = ["precommit-hook", "run-cargo-test"]}
assert_cmd = "0.10"
tempfile = "3.0"
criterion = "0.2"

[lib]
name = "libtmplgen"
path = "src/lib/lib.rs"

[[bin]]
name = "tmplgen"
path = "src/bin/bin.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1 # best optimization

[badges]
travis-ci = { repository = "Cogitri/tmplgen" }
codecov = { repository = "https://codecov.io/gh/Cogitri/tmplgen" }
